@@ -165,7 +165,7 @@ MagickExport MagickPassFail DescribeImage(Image *image,FILE *file,
           FormatSize(GetBlobSize(image),format);
           (void) fprintf(file,"%.1024s ",format);
         }
-      (void) fprintf(file,"%0.3fu %ldm:%.3fs",
+      (void) fprintf(file,"%0.3fu %ldm:%.6fs",
                      user_time,
                      (long) (elapsed_time/60.0),
                      fmod(elapsed_time,60.0));
@@ -174,7 +174,7 @@ MagickExport MagickPassFail DescribeImage(Image *image,FILE *file,
         least six times the timer's resolution (typically 0.01 on
         Unix).
       */
-      if (elapsed_time >= GetTimerResolution()*6)
+      if (!(image->ping) && (elapsed_time >= GetTimerResolution()*6))
         {
           pixels_per_second=(magick_int64_t) ((double) rows*columns/
                                               elapsed_time);
@@ -890,9 +890,9 @@ MagickExport MagickPassFail DescribeImage(Image *image,FILE *file,
   */
   if (user_time >= GetTimerResolution())
     (void) fprintf(file,"  User Time: %0.3fu\n",user_time);
-  if (elapsed_time >= GetTimerResolution())
+  if (!(image->ping) && (elapsed_time >= GetTimerResolution()))
     {
-      (void) fprintf(file,"  Elapsed Time: %ldm:%.3fs\n",
+      (void) fprintf(file,"  Elapsed Time: %ldm:%.6fs\n",
                      (long) (elapsed_time/60.0),
                      fmod(elapsed_time,60.0));
       pixels_per_second=(magick_int64_t) ((double) image->rows*
